# uniffi-kotlin-multiplatform-bindings

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
bindgen/: Cargo.toml  askama.toml
bindgen/src/: lib.rs  main.rs
bindgen/src/gen_kotlin_multiplatform/: callback_interface.rs  compounds.rs  custom.rs  enum_.rs  executor.rs  external.rs  miscellany.rs  mod.rs  object.rs  primitives.rs  record.rs  variant.rs
bindgen/src/templates/: helpers.j2  macros.kt
bindgen/src/templates/android/: Async.kt  CallbackInterfaceImpl.kt  CallbackInterfaceTemplate.kt  Helpers.kt  NamespaceLibraryTemplate.kt  ObjectCleanerHelper.kt  RustBufferTemplate.kt  Types.kt  wrapper.kt
bindgen/src/templates/android+jvm/: Async.kt  ByteBuffer.kt  CallbackInterfaceImpl.kt  ExternalTypeTemplate.kt  Helpers.kt  NamespaceLibraryTemplate.kt  ObjectCleanerHelper.kt  PointerHelper.kt  ReferenceHelper.kt  RustBufferTemplate.kt  Types.kt  wrapper.kt
bindgen/src/templates/common/: Async.kt  BooleanHelper.kt  ByteArrayHelper.kt  ByteBuffer.kt  CallbackInterfaceImpl.kt  CallbackInterfaceRuntime.kt  CallbackInterfaceTemplate.kt  CustomTypeTemplate.kt  DurationHelper.kt  EnumTemplate.kt  ErrorTemplate.kt  ExternalTypeTemplate.kt  FfiConverterTemplate.kt  Float32Helper.kt  Float64Helper.kt  ForeignExecutorTemplate.kt  HandleMap.kt  Helpers.kt  Int16Helper.kt  Int32Helper.kt  Int64Helper.kt  Int8Helper.kt  Interface.kt  MapTemplate.kt  NamespaceLibraryTemplate.kt  ObjectCleanerHelper.kt  ObjectRuntime.kt  ObjectTemplate.kt  OptionalTemplate.kt  PointerHelper.kt  RecordTemplate.kt  ReferenceHelper.kt  RustBufferTemplate.kt  SequenceTemplate.kt  StringHelper.kt  TimestampHelper.kt  TopLevelFunctionTemplate.kt  Types.kt  UInt16Helper.kt  UInt32Helper.kt  (+3 more)
bindgen/src/templates/ffi/: DurationHelper.kt  EnumTemplate.kt  FfiConverterTemplate.kt  HandleMap.kt  Int64Helper.kt  ObjectTemplate.kt  RustBufferTemplate.kt  TimestampHelper.kt  UInt8Helper.kt
bindgen/src/templates/generic/android+jvm/: CallbackInterfaceImpl.kt  ExternalTypeTemplate.kt  Types.kt  wrapper.kt
bindgen/src/templates/generic/common/: EnumTemplate.kt  ObjectTemplate.kt  RecordTemplate.kt  (+1 more)
bindgen/src/templates/headers/: CallbackInterfaceRuntime.h  CommonFfiDefinitions.h  FfiDefinitions.h  Helpers.h  NamespaceLibraryTemplate.h  RustBufferTemplate.h  Types.h  common.h  wrapper.h
bindgen/src/templates/jvm/: Async.kt  CallbackInterfaceImpl.kt  CallbackInterfaceRuntime.kt  CallbackInterfaceTemplate.kt  ForeignExecutorTemplate.kt  Helpers.kt  NamespaceLibraryTemplate.kt  ObjectCleanerHelper.kt  PointerHelper.kt  ReferenceHelper.kt  RustBufferTemplate.kt  Types.kt  wrapper.kt
bindgen/src/templates/native/: Async.kt  ByteBuffer.kt  CallbackInterfaceImpl.kt  CallbackInterfaceRuntime.kt  CallbackInterfaceTemplate.kt  ExternalTypeTemplate.kt  ForeignExecutorTemplate.kt  Helpers.kt  NamespaceLibraryTemplate.kt  ObjectCleanerHelper.kt  PointerHelper.kt  ReferenceHelper.kt  RustBufferTemplate.kt  Types.kt  wrapper.kt
examples/audio-cpp-app/: Cargo.toml  build.gradle.kts  build.rs  uniffi.toml
examples/audio-cpp-app/ios/AudioCppApp/: AudioCppApp.swift  ContentView.swift
examples/audio-cpp-app/ios/AudioCppApp.xcodeproj/: project.pbxproj
examples/audio-cpp-app/ios/Config/: Config.xcconfig
examples/audio-cpp-app/src/androidMain/: AndroidManifest.xml
examples/custom-types/: Cargo.toml  build.gradle.kts  proguard-rules.pro  uniffi.toml
examples/custom-types/src/: custom-types.udl
examples/todolist/: Cargo.toml  build.gradle.kts  uniffi.toml
examples/tokio-blake3-app/: Cargo.toml  build.gradle.kts  uniffi.toml
examples/tokio-blake3-app/ios/Config/: Config.xcconfig
examples/tokio-blake3-app/ios/TokioBlake3App/: ContentView.swift  TokioBlake3App.swift
examples/tokio-blake3-app/ios/TokioBlake3App.xcodeproj/: project.pbxproj
tests/callbacks/uniffi/: Cargo.toml  uniffi-bindgen.rs  uniffi.toml
tests/callbacks/uniffi/src/: callbacks.udl  lib.rs
tests/chronological/uniffi/: Cargo.toml  uniffi.toml
tests/chronological/uniffi/src/: chronological.udl
tests/coverall/uniffi/: Cargo.toml  uniffi-bindgen.rs  uniffi.toml
tests/coverall/uniffi/src/: coverall.udl  lib.rs
tests/error-types/uniffi/: Cargo.toml  uniffi.toml
tests/error-types/uniffi/src/: error-types.udl  lib.rs
tests/external-types/uniffi/: Cargo.toml  build.rs  uniffi.toml
tests/external-types/uniffi/crate_one/: Cargo.toml
tests/external-types/uniffi/crate_two/: Cargo.toml
tests/external-types/uniffi/src/: lib.rs
tests/external_types/uniffi/: Cargo.toml
tests/external_types/uniffi/src/: lib.rs
tests/futures/uniffi/: Cargo.toml  build.rs  uniffi.toml
tests/futures/uniffi/src/: lib.rs
tests/gradle/android-linking/: CMakeLists.txt  Cargo.toml  build.gradle.kts
tests/gradle/android-linking/another-android-linking-cpp/: CMakeLists.txt  another-android-linking-cpp.cpp
tests/gradle/cargo-only/: Cargo.toml  build.gradle.kts  build.rs
tests/keywords/uniffi/: Cargo.toml  uniffi.toml
tests/keywords/uniffi/src/: keywords.udl  lib.rs
tests/proc-macro/uniffi/: Cargo.toml  uniffi.toml
tests/trait-methods/uniffi/: Cargo.toml
tests/trait-methods/uniffi/src/: lib.rs
tests/uniffi/callbacks/: Cargo.toml
tests/uniffi/chronological/: Cargo.toml
tests/uniffi/coverall/: Cargo.toml
tests/uniffi/coverall/src/: coverall.udl
tests/uniffi/docstring/: Cargo.toml  uniffi.toml
tests/uniffi/docstring/src/: docstring.udl
tests/uniffi/enum-types/: Cargo.toml  build.gradle.kts
tests/uniffi/enum-types/src/: enum-types.udl
tests/uniffi/error-types/: Cargo.toml
tests/uniffi/ext-types/custom-types/: Cargo.toml  build.rs  uniffi.toml
tests/uniffi/ext-types/ext-types-proc-macro/: Cargo.toml  build.gradle.kts  uniffi.toml
tests/uniffi/futures/: Cargo.toml
tests/uniffi/futures/src/: futures.udl
tests/uniffi/proc-macro/: Cargo.toml
tests/uniffi/proc-macro/src/: proc-macro.udl
tests/uniffi/simple-fns/: Cargo.toml  uniffi.toml
tests/uniffi/simple-fns/src/: simple-fns.udl
(+550 files in other folders)
