[package]
name = "uniffi-kotlin-multiplatform"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
askama = { version = "0.12", default-features = false, features = ["config"] }
camino = "1.1.1"
heck = "0.4"
include_dir = "0.7.3"
paste = "1.0"
serde = "1"
toml = "0.5"
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
clap = { version = "4", features = ["cargo", "std", "derive"] }

[[bin]]
name = "uniffi-bindgen-kotlin-multiplatform"
path = "src/main.rs"
