[workspace]
members = [
    "bindgen",
    "tests/callbacks/uniffi",
    "tests/chronological/uniffi",
    "tests/coverall/uniffi",
    "tests/docstring/uniffi",
    "tests/docstring-proc-macro/uniffi",
    "tests/enum-types/uniffi",
    "tests/error-types/uniffi",
    "tests/external-types/uniffi",
    "tests/futures/uniffi",
    "tests/keywords/uniffi",
    "tests/proc-macro/uniffi",
    "tests/trait-methods/uniffi",

    "tests/gradle/android-linking",
    "tests/gradle/cargo-only",

    "examples/arithmetic-procmacro",
    "examples/audio-cpp-app",
    "examples/todolist",
    "examples/tokio-blake3-app",
]
resolver = "2"

# Used in tests/gradle/cargo-only
[profile.my-opt-level-2-profile]
inherits = "dev"
opt-level = 2
