[package]
name = "uniffi_bindgen_kotlin_multiplatform"
version = "0.3.0"
edition = "2021"
authors = ["UniFFI Kotlin Multiplatform bindings team"]
description = "a Kotlin Multiplatform bindings generator for rust (codegen and cli tooling)"
documentation = "https://trixnity.gitlab.io/uniffi-kotlin-multiplatform-bindings"
homepage = "https://trixnity.gitlab.io/uniffi-kotlin-multiplatform-bindings"
repository = "https://gitlab.com/trixnity/uniffi-kotlin-multiplatform-bindings"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["ffi", "bindgen", "kotlin"]

[dependencies]
anyhow = "1.0.66"
askama = { version = "0.12", default-features = false, features = ["config"] }
camino = "1.1.1"
heck = "0.4"
include_dir = "0.7.3"
paste = "1.0"
serde = "1"
toml = "0.5"
uniffi_bindgen = "0.25.2"
clap = { version = "4", features = ["cargo", "std", "derive"] }

[[bin]]
name = "uniffi-bindgen-kotlin-multiplatform"
path = "src/main.rs"
