[package]
name = "uniffi_kotlin_multiplatform_bindgen"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "uniffi-bindgen-kotlin-multiplatform"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", default-features = false, features = ["config"] }
camino = "1.1.7"
clap = { version = "4.5.7", features = ["derive", "cargo", "std"] }
fs-err = "2.11.0"
heck = "0.5.0"
paste = "1.0.15"
serde = "1.0.203"
textwrap = "0.16.1"
toml = "0.5"
uniffi_bindgen = "=0.28.0"
uniffi_meta = "=0.28.0"
