[package]
name = "uniffi_bindgen_kotlin_multiplatform"
version = "0.6.15"
edition = "2021"
authors = ["UniFFI Kotlin Multiplatform bindings team"]
description = "a Kotlin Multiplatform bindings generator for rust (codegen and cli tooling)"
documentation = "https://trixnity.gitlab.io/uniffi-kotlin-multiplatform-bindings"
homepage = "https://trixnity.gitlab.io/uniffi-kotlin-multiplatform-bindings"
repository = "https://gitlab.com/trixnity/uniffi-kotlin-multiplatform-bindings"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["ffi", "bindgen", "kotlin"]

[[bin]]
name = "uniffi-bindgen-kotlin-multiplatform"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
askama = { version = "0.12.1", default-features = false, features = ["config"] }
camino = { workspace = true }
cargo_metadata = "0.15.0"
clap = { version = "4.5.7", features = ["derive", "cargo", "std"] }
fs-err = "2.11.0"
heck = "0.5.0"
paste = "1.0.15"
serde = "1.0.203"
textwrap = "0.16.1"
toml = "0.5"
uniffi_bindgen = { workspace = true }
uniffi_meta = { workspace = true }
