[package]
name = "uniffi-kmm-example-todolist"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_example_todolist"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = "0.28.0"
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }
