[package]
name = "uniffi-kmm-example-tokio-blake3-app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_example_tokio_blake3_app"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { version = "0.28.3", features = ["tokio"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["native-tls-vendored"] }
blake3 = "1"
