[package]
name = "uniffi-kmm-fixture-chronological"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_fixture_chronological"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = "0.25.2"
uniffi_macros = "0.25.2"
uniffi_bindgen = "0.25.2"
once_cell = "1.12"
thiserror = "1.0"
chrono = { version = "0.4.23", default-features = false, features = ["alloc", "std"] }

[build-dependencies]
uniffi = { version = "0.25.2", features = ["build"] }
uniffi_bindgen = "0.25.2"
camino = "1.1.1"
