[package]
name = "coverall"
version = "0.1.0"
edition = "2021"

[lib]
name = "coverall"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = "0.25.1"
uniffi_macros = "0.25.1"
uniffi_bindgen = "0.25.1"
uniffi-kotlin-multiplatform = { path = "../../.." }
camino = "1.1.1"
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.25.1", features = ["build"] }
uniffi_bindgen = "0.25.1"
uniffi-kotlin-multiplatform = { path = "../../.." }
camino = "1.1.1"