[package]
name = "uniffi-kmm-fixture-error-types"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_fixture_error_types"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
uniffi = "0.28.0"
uniffi_macros = "0.28.0"
uniffi_bindgen = "0.28.0"
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }
uniffi_bindgen = "0.28.0"
camino = "1.1.1"
