[package]
name = "external_types"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "external_types"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
uniffi_macros = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
once_cell = "1.12"
thiserror = "1.0"
crate_one = { path = "crate_one" }
crate_two = { path = "crate_two" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1", features = ["build"] }
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
camino = "1.1.1"
