[package]
name = "uniffi-fixture-futures"
version = "0.21.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "futures"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1", features = ["tokio"] }
uniffi_macros = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
thiserror = "1.0"
tokio = { version = "1.24.1", features = ["time", "sync"] }
once_cell = "1.18.0"

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1", features = ["build"] }
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
camino = "1.1.1"
