[package]
name = "uniffi-kmm-fixture-futures"
version = "0.21.0"
authors = ["Ivan Enderlin <ivan@mnt.io>"]
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "uniffi_kmm_fixture_futures"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.28.3", features = ["tokio"] }
uniffi_macros = "0.28.3"
uniffi_bindgen = "0.28.3"
thiserror = "1.0"
tokio = { version = "1.24.1", features = ["time", "sync"] }
once_cell = "1.18.0"

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }
uniffi_bindgen = "0.28.3"
camino = "1.1.1"
