[package]
name = "uniffi-kmm-fixture-gradle-cargo-only"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_fixture_gradle_cargo_only"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
jni = "0.21"

[build-dependencies]
cbindgen = "0.26.0"

[features]
feature1 = []
feature2 = []
feature3 = []
feature4 = []
feature5 = []
feature6 = []
feature7 = []
