[package]
name = "keywords"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "keywords"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
uniffi_macros = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
once_cell = "1.12"
thiserror = "1.0"

[build-dependencies]
uniffi_build = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1", features = ["builtin-bindgen"] }
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "7cd3aac735e905e1725d350a7a82d57aa50caaa1" }
camino = "1.1.1"
