[package]
name = "uniffi-kmm-fixture-trait-methods"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_fixture_trait_methods"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = "0.28.0"
thiserror = "1.0"
lazy_static = "1.4"

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }
camino = "1.1.1"
