[package]
name = "uniffi-kmm-fixture-coverall"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_fixture_coverall"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
uniffi-kmm-fixture-build-common = { path = "../../build-common" }
