[package]
name = "uniffi-kmm-fixture-error-types"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_fixture_error_types"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
anyhow = { workspace = true }
uniffi = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
uniffi-kmm-fixture-build-common = { path = "../../build-common" }
