[package]
name = "uniffi-kmm-fixture-proc-macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_fixture_proc_macro"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
uniffi-kmm-fixture-build-common = { path = "../../build-common" }

[features]
default = ["myfeature"]
myfeature = []