[package]
name = "uniffi-kmm-fixture-ext-types-custom-types"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "uniffi_kmm_fixture_ext_types_custom_types"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
uniffi = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
uniffi-kmm-fixture-build-common = { path = "../../../build-common" }
